Fix most warnings arising from NetX code.
2010-10-20  Andrew John Hughes  <ahughes@redhat.com>

	* netx/javax/jnlp/ServiceManager.java:
	(lookupTable): Add generic types.
	* netx/net/sourceforge/jnlp/AppletDesc.java:
	(parameters): Likewise.
	(AppletDesc(String,String,URL,int,int,Map)): Likewise.
	(getParameters()): Likewise.
	* netx/net/sourceforge/jnlp/ApplicationDesc.java:
	(getArguments()): Remove redundant cast.
	(addArgument(String)): Add generic typing.
	* netx/net/sourceforge/jnlp/ExtensionDesc.java:
	(extToPart): Add generic types.
	(eagerExtParts): Likewise.
	* netx/net/sourceforge/jnlp/InformationDesc.java:
	(info): Likewise.
	(getIcons(Object)): Add generic typing.
	(getAssociations()): Likewise.
	(getRelatedContents()): Likewise.
	(getItem(Object)): Likewise.
	(getItems(Object)): Likewise.
	(addItem(String,Object)): Likewise.
	* netx/net/sourceforge/jnlp/JNLPFile.java:
	(resources): Likewise.
	(InformationDesc.getItems(Object)): Likewise.
	(getResources(Class)): Likewise.
	* netx/net/sourceforge/jnlp/LaunchException.java:
	(getCauses()): Likewise.
	* netx/net/sourceforge/jnlp/Launcher.java:
	(launchApplication(JNLPFile)): Likewise.
	* netx/net/sourceforge/jnlp/NetxPanel.java:
	(NetxPanel(URL,Hashtable)): Likewise.
	(NetxPanel(URL,Hashtable,boolean)): Likewise.
	* netx/net/sourceforge/jnlp/Node.java:
	(getChildNodes()): Likewise.
	* netx/net/sourceforge/jnlp/Parser.java:
	(getResources(Node,boolean)): Likewise.
	(getInfo(Node)): Likewise.
	(getInformationDesc(Node)): Likewise.
	(getApplet(Node)): Likewise.
	(getApplication(Node)): Likewise.
	(splitString(String)): Likewise.
	(getLocales(Node)): Likewise.
	(getChildNodes(Node,String)): Likewise.
	* netx/net/sourceforge/jnlp/PluginBridge.java:
	Fix variable naming and add generic types.
	(cacheJars): Changed from cache_jars.
	(cacheExJars): Changed from cache_ex-jars.
	(atts): Add generic typing.
	(PluginBridge(URL,URL,String,String,int,int,Hashtable)): Likewise.
	(getInformation(Locale)): Likewise.
	(getR